message box updete

--- a/index.html
+++ b/index.html
@@ -367,6 +367,28 @@
                 </div>
             </div>
         </div>
+        <!-- message aria -->
+        <div class="message-aria">
+            <div class="message-box">
+                <form action="">
+                    <div class="input-box">
+                        <div class="">
+                            <input type="name" placeholder="Full Name">
+                            <br>
+                            <input type="email" placeholder="Email">
+                            <br>
+                            <input type="number" placeholder="Phone">
+                            <br>
+                        </div>
+                        <div class="">
+                            <textarea name="message" id="" cols="30" rows="10" placeholder="message"></textarea>
+                            <br>
+                            <button>SUBMIT NOW</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </section>    
 </body>
 </html>
